processed/gerrit/txt/45814.txt
Change:     45814
Subject:    LU-15220 utils: fix gcc-11 -Werror=mismatched-dealloc error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/45814
Change-Id:  I518db394a282c8e6123d878f63312bfb27c59235
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2021-12-09 19:22:30.000000000
Updated:    2022-01-11 06:19:12.000000000
Patch Set:  3
Insertions: +4
Deletions:  -4
Comments:   1 (0 unresolved)

--- Labels ---
  Code-Review: Alex Zhuravlev: +1; Oleg Drokin: +2; John Hammond: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Alex Zhuravlev, John Hammond

--- Commit Message ---
LU-15220 utils: fix gcc-11 -Werror=mismatched-dealloc error

This patch fixes the following -Werror=mismatched-dealloc error in
lustre_rsync.c:

lustre_rsync.c: In function ‘lr_locate_rsync’:
lustre_rsync.c:1472:17: error: ‘fclose’ called on pointer returned
from a mismatched allocation function [-Werror=mismatched-dealloc]
 1472 |                 fclose(fp);
      |                 ^~~~~~~~~~
lustre_rsync.c:1467:14: note: returned from ‘popen’
 1467 |         fp = popen(rsync, "r");
      |              ^~~~~~~~~~~~~~~~~

Test-Parameters: trivial testlist=lustre-rsync-test

Change-Id: I518db394a282c8e6123d878f63312bfb27c59235
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/45814
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: John L. Hammond <jhammond@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2021-12-09 19:22:30.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-12-09 19:23:13.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2021-12-09 19:59:48.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/84951/ : SUCCESS

--- Message (Jian Yu, 2021-12-09 19:59:51.000000000) ---
Patch Set 2: Commit message was updated.

--- Message (wc-checkpatch, 2021-12-09 20:03:47.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2021-12-09 20:42:10.000000000) ---
Patch Set 2:

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/84955/ : SUCCESS

--- Message (John Hammond, 2022-01-05 14:49:57.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Alex Zhuravlev, 2022-01-05 17:47:51.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2022-01-11 06:19:09.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2022-01-11 06:19:12.000000000) ---
Change has been successfully cherry-picked as 64ba2b18349b56c5d7ade944ea713bade84bc02e by Oleg Drokin
